--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-704.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-678.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.68MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-642.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇸🇬 新加坡-4.09MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-337.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-839.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-351.8KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-361.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.17MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-476.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-553.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-282.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-222.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-422.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-704.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-337.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-704.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-337.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-704.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-337.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-704.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-337.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-704.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-337.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-704.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-337.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-704.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-337.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
