--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-351.8KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-361.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.17MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-476.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-553.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-282.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-222.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-843.7KB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-446.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇦 加拿大-422.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-1.08MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-720.6KB/s(Youtube:不良林), server: 104.156.229.148, port: 36788, type: vmess, uuid: 9fee7249-69fb-490d-e617-cfb54a249932, alterId: 60, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.156.229.148}}
+  - {name: 🇺🇸 美国-7.18MB/s(Youtube:不良林), server: 20.243.43.36, port: 20580, type: vmess, uuid: d948df60-b4b3-4103-f296-deccc93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /dfgdfg, ws-headers: {Host: 20.243.43.36}}
+  - {name: 🇫🇷 法国-943.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-943.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-943.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-943.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-943.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-943.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-943.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-351.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-361.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-476.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-553.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-222.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-422.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-720.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-943.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
